# helios-core

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: phase0.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md
.github/workflows/: ci.yml
api/: app.py  catalog.py  celery_app.py  config.py  layout.py  runner.py  schemas.py  seeds.py  solar.py  tasks.py  tmy.py
api/static/: index.html
core/mismatch/: __init__.py  aging.py  cell_matrix.py
core/thermal/: __init__.py  solver.py
core/transposition/: __init__.py  perez_continuous.py  perez_discrete.py  reverse.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: SPEC.md
docs/adr/: 0001-pvlib-as-reference-only.md  0002-aging-time-compression.md
registry/: __init__.py  crypto.py  exceptions.py  models.py
tests/: test_no_pvlib_in_core.py  test_phase1_transposition.py  test_phase2_thermal.py  test_phase3_mismatch.py  test_phase4_registry.py  test_phase5_api.py  test_scaffold.py
validation/: phase1_perez.py  phase2_thermal.py  phase3_mismatch.py  phase4_registry.py  phase5_e2e.py
