[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helios-core"
version = "0.1.0"
description = "Cloud-native, headless PV yield simulation engine with continuous multi-physics solvers"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Amos Mante-Kwarteng / MKA Solutions" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "pydantic>=2.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "celery[redis]>=5.4",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "cryptography>=42.0",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pvlib>=0.10.4",      # REFERENCE/VALIDATION ONLY — never import inside core/
    "matplotlib>=3.8",     # validation plots only
    "httpx>=0.27",         # API tests
]

[tool.setuptools.packages.find]
include = ["core*", "registry*", "api*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "NPY"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["core", "registry"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=core --cov=registry --cov-report=term-missing"

[tool.coverage.report]
fail_under = 85
